--- a/src/test/resources/field-mappings.properties
+++ b/src/test/resources/field-mappings.properties
@@ -1,30 +1,12 @@
-# Root field mappings (original -> BigQuery)
-root.orderId=order_id
-root.orderDate=order_date
-root.paymentMethod=payment_method
-root.totalAmount=total_amount
-root.taxAmount=tax_amount
-root.discountApplied=discount_applied
-root.status=status
-root.metadata=metadata
-
-# Customer field mappings
-customer.customerId=customer_id
-customer.loyaltyTier=loyalty_tier
-customer.name=name
-customer.email=email
-customer.phone=phone
-
-# Address field mappings
-address.zipCode=zip_code
-address.street=street
-address.city=city
-address.state=state
-address.country=country
-
-# Item field mappings
-item.productId=product_id
-item.productName=product_name
-item.unitPrice=unit_price
-item.quantity=quantity
-item.category=category
+# Validation order with embedded field mappings
+orderId=order_id
+customer=[customerId=customer_id,name=name,email=email,phone=phone,loyaltyTier=loyalty_tier]
+items=[productId=product_id,productName=product_name,quantity=quantity,unitPrice=unit_price,category=category]
+orderDate=order_date
+shippingAddress=shipping_address:{street=street,city=city,state=state,zipCode=zip_code,country=country}
+paymentMethod=payment_method
+status=status
+metadata=metadata
+totalAmount=total_amount
+taxAmount=tax_amount
+discountApplied=discount_applied
